renderer/style.css
/* ... */
.modalTitle {
	width: 75vw;
	height: 3vw;
	font-weight: bold;
	font-size: 2vw;
	display: flex;
	border-bottom: 1px solid #888;
}

.modal button {
	color: black !important;
}

.close {
	width: 3vw;
	height: 3vw;
	font-weight: bold;
	cursor: pointer;
	display: flex;
	justify-content: end;
	font-size: 2vw;
}

#musicstuff {
	width: 50vw;
}

#allbuttons {
	width: 28.5vw;
	height: 5vh;
	display: flex;
	flex-direction: row;
	margin-left: 1.5vh;
	margin-top: 1.5vh;
	margin-bottom: 1.5vh;
}

#main-menu-content {
	display: block;
	height: 85vh;
	width: 82vw;
}

.content {
	margin-left: calc(13.5vw + 3vh);
}

.tab-content {
	display: flex;
	flex-direction: column;
	width: 100% !important;
	align-items: unset;
	padding: 15px;
}

.tab-content.hidden {
	display: none;
}

#my-music-content {
	display: none;
	grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
	grid-auto-rows: 200px;
}

#playlists-content {
	display: none;
	grid-template-rows: 50px;
	grid-auto-rows: 200px;
}

#settings-content {
	display: none;
	text-align: left;
	align-items: flex-start;
}

#settings-content div {
	height: 4vh;
}

#settings-content h1 {
	margin: 5vh 0;
}

#statistics-content {
	align-items: center;
}

#settings-content,
#statistics-content {
	width: 85vw !important;
	height: 92vh;
}

.scrollArea {
	overflow-y: scroll !important;
}

.scrollArea::-webkit-scrollbar {
	display: block;
	width: 12px;
}

.scrollArea::-webkit-scrollbar-track {
	background: rgba(255, 255, 255, 0.07);
	border-radius: 10px;
}

.scrollArea::-webkit-scrollbar-thumb {
	background: #ffcc00;
	border-radius: 10px;
	border: 3px solid transparent;
	background-clip: content-box;
}

.scrollArea::-webkit-scrollbar-thumb:hover {
	background: #ffd633;
	transition: all 400ms ease;
}

#settings-content select,
#display-count,
#music-mode-select,
#music-search,
#musicSearchInputAmount,
#musicSearchEnterButton,
#musicSearchRefreshButton {
	padding: 2px 4px;
	background-color: rgba(0, 0, 0, 0.8);
	transition: all 0.5s ease-in-out;
	cursor: pointer;
	color: white !important;
}

#settings-content button {
	padding: 5px 10px;
	background-color: rgba(0, 0, 0, 0.8);
	border: 1px solid white;
	transition: all 0.5s ease-in-out;
	border-radius: 5px;
	cursor: pointer;
}

#settings-content button:hover {
	background-color: rgba(0, 0, 0, 0.5);
}

#playlistsArea {
	height: calc(89vh - 30px);
	padding: 2vh 0 !important;
}

.playlist {
	width: 80vw;
	height: 200px;
	border: 1px solid #ccc;
	margin: 10px 0;
	display: flex;
	flex-direction: row;
	vertical-align: top;
	overflow: hidden;
	position: relative;
}

.playlistThumbnail {
	width: 198px;
	height: 198px;
}

.playlist-info {
	width: calc(80vw - 200px);
	height: 2vw;
	display: flex;
	flex-direction: row;
	align-items: center;
	justify-content: space-between;
	padding-left: 1vw;
	border: 1px solid white;
}

.playlist-songs {
	width: calc(80vw - 200px);
	height: 180px;
	overflow-y: scroll;
	padding: 5px 0 0 1vw;
	border: 1px solid white;
}

.playlistInfoandSongs {
	display: flex;
	flex-direction: column;
}

.playlistName {
	width: 70vw;
	height: 2vw;
	display: flex;
	flex-direction: row;
	justify-content: start;
	align-items: center;
	text-align: center;
}

.playlist-button {
	width: 4vw;
	margin-right: -0.7vw;
	cursor: pointer;
	display: flex;
	justify-content: center;
	align-items: center;
}

#customiseImage {
	width: 160px;
	height: 100px;
}

.invisible {
	display: none;
}

#downloadFirstInput {
	width: 70vw;
	height: 5vh;
}

#downloadFirstButton {
	width: 8vw;
	height: 5.8vh;
}

#downloadSecondPhase {
	width: 78vw;
	height: 65vh;
	position: relative;
}

#downloadModalBottomRow {
	width: 78vw;
	height: 5vh;
	display: flex;
	flex-direction: row;
	border: 1px solid white;
	position: absolute;
	bottom: 0;
}

#downloadPlaceofSongs {
	width: 78vw;
	height: 59vh;
	border: 1px solid white;
	overflow-y: scroll;
	display: flex;
	flex-direction: column;
}

.exampleDownloadColumn {
	width: 57vw;
	height: 10vw;
	display: flex;
	flex-direction: column;
	margin: 1vw 1vw 0 1vw;
}

#downloadSecondInput {
	width: 56vw;
	height: 7vw;
	font-size: 2vw;
}

.thumbnailImage {
	width: 16vw;
	height: 10vw;
	background-size: cover;
	margin-right: 1vw;
}

.songAndThumbnail {
	display: flex;
	flex-direction: row;
}

#downloadModalText {
	width: 73vw;
	height: 5vh;
	display: flex;
	justify-content: start;
	align-items: center;
	padding-left: 0.5vw;
}

#finalDownloadButton {
	width: 5vw;
	height: 5vh;
}

.underline-text {
	text-decoration: underline;
}

#mainmenulogo {
	width: 20vw;
	height: 20vw;
	background-size: cover;
	background-position: center;
	background-repeat: no-repeat;
	margin-bottom: calc(42vh - 20vw);
	margin-left: 5vw;
	margin-right: 5vw;
	animation: marginShift 1.5s infinite alternate ease-in-out;
}

#mainmenuapptext {
	margin-bottom: calc(50vh - 20vw);
	font-size: 5vw;
}

.mainmenusquares {
	width: 10vw;
	height: 10vw;
	text-align: center;
	display: flex;
	align-items: center;
	justify-content: center;
	border-radius: 8px;
	backdrop-filter: blur(10px);
	-webkit-backdrop-filter: blur(10px);
	background-color: rgba(255, 255, 255, 0.5);
	box-shadow: 0 1px 12px rgba(0, 0, 0, 0.25);
	border: 1px solid rgba(255, 255, 255, 0.3);
	text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.5);
	font-size: 1.25rem;
}

#mainmenurandomsong,
#mainmenurandomplaylist {
	cursor: pointer;
}

.switch {
	position: relative;
	display: inline-block;
	width: 60px;
	height: 34px;
	margin-left: 2vw;
}

.switch input {
	opacity: 0;
	width: 0;
	height: 0;
}

.slider {
	position: absolute;
	cursor: pointer;
	top: 0;
	left: 0;
	right: 0;
	bottom: 0;
	background-color: #ccc;
	transition: 0.4s;
	border-radius: 34px;
}

.slider:before {
	position: absolute;
	content: "";
	height: 26px;
	width: 26px;
	left: 4px;
	bottom: 4px;
	background-color: white;
	transition: 0.4s;
	border-radius: 50%;
}

input:checked + .slider {
	background-color: #2196f3;
}

input:checked + .slider:before {
	transform: translateX(26px);
}

.numberingTheBoxes {
	width: 30px;
	height: 30px;
}
/* ... */

